--- a/BATAMURIZA PHIONA 222014847 CAT WEB TECHNOLOGY/CONTACT US.html
+++ b/BATAMURIZA PHIONA 222014847 CAT WEB TECHNOLOGY/CONTACT US.html
@@ -125,7 +125,7 @@
 
 <footer>
   <center> 
-    <b><h2>UR CBE BIT &copy, 2024 & reg, Designer by: @Didas Birimimana</h2></b>
+    <b><h2>UR CBE BIT &copy, 2024 & reg, Designer by: @phiona Batamuriza</h2></b>
   </center>
 </footer>
 
