--- a/BATAMURIZA PHIONA 222014847 CAT WEB TECHNOLOGY/home.html
+++ b/BATAMURIZA PHIONA 222014847 CAT WEB TECHNOLOGY/home.html
@@ -119,7 +119,7 @@ footer{
   
 <footer>
   <center> 
-    <b><h2>UR CBE BIT &copy, 2024 & reg, Designer by: @Didas Birimimana</h2></b>
+    <b><h2>UR CBE BIT &copy, 2024 & reg, Designer by: @Phiona Batamuriza</h2></b>
   </center>
 </footer>
   
